Remove Last.fm Skip button for streams

Last.fm API no longer supports it, don't confuse users.

BUG: 305576
FIXED-IN: 2.7