src/MainWindow.cpp
@@ -886,11 +886,6 @@ MainWindow::createActions()
     //action->setGlobalShortcut( KShortcut( Qt::META + Qt::Key_B ) );
     connect( action, SIGNAL( triggered() ), SIGNAL( banTrack() ) );
 
-    action = new KAction( i18n( "Last.fm: Skip Current Track" ), this );
-    ac->addAction( "skipTrack", action );
-    action->setGlobalShortcut( KShortcut( Qt::META + Qt::Key_S ) );
-    connect( action, SIGNAL( triggered() ), SIGNAL( skipTrack() ) );
-
     action = new KAction( KIcon( "media-track-queue-amarok" ), i18n( "Queue Track" ), this );
     ac->addAction( "queueTrack", action );
     action->setShortcut( KShortcut( Qt::CTRL + Qt::Key_D ) );
